gitops/infra/traefik/manifests/base/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.susdomain.name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api@internal
                port:
                  number: 80
  tls:
    - hosts:
        - traefik.susdomain.name
      secretName: traefik-dashboard-tls
